@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Using strictures internally
           - Added strictures::defanged
           - Dropped appclass and config_class attrs from ::Server
           - Posts list indents / outdents correctly
